@@ -64,8 +64,9 @@ QueryList::QueryList(QueryRegistryFeature& feature, TRI_vocbase_t*)
       _current(),
       _slow(),
       _slowCount(0),
-      _enabled(feature.trackSlowQueries()),
-      _trackSlowQueries(feature.trackSlowQueries()),
+      _enabled(feature.trackingEnabled()),
+      _trackSlowQueries(_enabled && feature.trackSlowQueries()),
+      _trackQueryString(feature.trackQueryString()),
       _trackBindVars(feature.trackBindVars()),
       _slowQueryThreshold(feature.slowQueryThreshold()),
       _slowStreamingQueryThreshold(feature.slowStreamingQueryThreshold()),
@@ -77,7 +78,7 @@ QueryList::QueryList(QueryRegistryFeature& feature, TRI_vocbase_t*)
 /// @brief insert a query
 bool QueryList::insert(Query* query) {
   // not enable or no query string
-  if (!_enabled || query == nullptr || query->queryString().empty()) {
+  if (!enabled() || query == nullptr || query->queryString().empty()) {
     return false;
   }
 
@@ -122,7 +123,7 @@ void QueryList::remove(Query* query) {
   bool const isStreaming = query->queryOptions().stream;
   double threshold = (isStreaming ? _slowStreamingQueryThreshold : _slowQueryThreshold);
 
-  if (!_trackSlowQueries || threshold < 0.0) {
+  if (!trackSlowQueries() || threshold < 0.0) {
     return;
   }
 
@@ -153,7 +154,7 @@ void QueryList::remove(Query* query) {
       if (_trackBindVars) {
         // also log bind variables
         auto bp = query->bindParameters();
-        if (bp != nullptr) {
+        if (bp != nullptr && !bp->slice().isNone()) {
           bindParameters.append(", bind vars: ");
           bindParameters.append(bp->slice().toJson());
           if (bindParameters.size() > _maxQueryStringLength) {
@@ -192,6 +193,8 @@ void QueryList::remove(Query* query) {
 
 /// @brief kills a query
 Result QueryList::kill(TRI_voc_tick_t id) {
+  size_t const maxLength = _maxQueryStringLength;
+
   READ_LOCKER(writeLocker, _lock);
 
   auto it = _current.find(id);
@@ -202,7 +205,7 @@ Result QueryList::kill(TRI_voc_tick_t id) {
 
   Query* query = (*it).second;
   LOG_TOPIC("25cc4", WARN, arangodb::Logger::FIXME)
-      << "killing AQL query " << id << " '" << query->queryString() << "'";
+      << "killing AQL query " << id << " '" << extractQueryString(query, maxLength) << "'";
 
   query->kill();
   return Result();
@@ -212,6 +215,7 @@ Result QueryList::kill(TRI_voc_tick_t id) {
 /// (i.e. the filter should return true for a queries to be killed)
 uint64_t QueryList::kill(std::function<bool(Query&)> const& filter, bool silent) {
   uint64_t killed = 0;
+  size_t const maxLength = _maxQueryStringLength;
 
   READ_LOCKER(readLocker, _lock);
 
@@ -224,10 +228,10 @@ uint64_t QueryList::kill(std::function<bool(Query&)> const& filter, bool silent)
 
     if (silent) {
       LOG_TOPIC("f7722", TRACE, arangodb::Logger::FIXME)
-          << "killing AQL query " << query.id() << " '" << query.queryString() << "'";
+          << "killing AQL query " << query.id() << " '" << extractQueryString(&query, maxLength) << "'";
     } else {
       LOG_TOPIC("90113", WARN, arangodb::Logger::FIXME)
-          << "killing AQL query " << query.id() << " '" << query.queryString() << "'";
+          << "killing AQL query " << query.id() << " '" << extractQueryString(&query, maxLength) << "'";
     }
 
     query.kill();
@@ -308,5 +312,8 @@ size_t QueryList::count() {
 }
 
 std::string QueryList::extractQueryString(Query const* query, size_t maxLength) const {
-  return query->queryString().extract(maxLength);
+  if (trackQueryString()) {
+    return query->queryString().extract(maxLength);
+  }
+  return "<hidden>";
 }
