@@ -70,7 +70,7 @@ class QueryList {
 
   /// @brief destroy a query list
   ~QueryList() = default;
-
+  
  public:
   /// @brief whether or not queries are tracked
   /// we're not using a lock here for performance reasons - thus concurrent
@@ -95,6 +95,16 @@ class QueryList {
   /// we're not using a lock here for performance reasons - thus concurrent
   /// modifications of this variable are possible but are considered unharmful
   inline void trackSlowQueries(bool value) { _trackSlowQueries.store(value); }
+  
+  /// @brief whether to track the full query string
+  inline bool trackQueryString() const {
+    return _trackQueryString.load(std::memory_order_relaxed);
+  }
+
+  /// @brief toggle slow query tracking
+  /// we're not using a lock here for performance reasons - thus concurrent
+  /// modifications of this variable are possible but are considered unharmful
+  inline void trackQueryString(bool value) { _trackQueryString.store(value); }
 
   /// @brief whether or not bind vars are tracked with queries
   /// we're not using a lock here for performance reasons - thus concurrent
@@ -237,6 +247,9 @@ class QueryList {
 
   /// @brief whether or not slow queries are tracked
   std::atomic<bool> _trackSlowQueries;
+  
+  /// @brief whether or not the query string is tracked
+  std::atomic<bool> _trackQueryString;
 
   /// @brief whether or not bind vars are also tracked with queries
   std::atomic<bool> _trackBindVars;
