@@ -44,7 +44,9 @@ std::atomic<aql::QueryRegistry*> QueryRegistryFeature::QUERY_REGISTRY{nullptr};
 
 QueryRegistryFeature::QueryRegistryFeature(application_features::ApplicationServer& server)
     : ApplicationFeature(server, "QueryRegistry"),
+      _trackingEnabled(true),
       _trackSlowQueries(true),
+      _trackQueryString(true),
       _trackBindVars(true),
       _failOnWarning(false),
       _queryCacheIncludeSystem(false),
@@ -88,10 +90,16 @@ void QueryRegistryFeature::collectOptions(std::shared_ptr<ProgramOptions> option
                      "runtime threshold for AQL queries (in seconds, 0 = no limit)",
                      new DoubleParameter(&_queryMaxRuntime))
                      .setIntroducedIn(30607).setIntroducedIn(30703);
-
-  options->addOption("--query.tracking", "whether to track slow AQL queries",
+  
+  options->addOption("--query.tracking", "whether to track queries",
+                     new BooleanParameter(&_trackingEnabled));
+  
+  options->addOption("--query.tracking-slow-queries", "whether to track slow queries",
                      new BooleanParameter(&_trackSlowQueries));
 
+  options->addOption("--query.tracking-with-querystring", "whether to track the query string",
+                     new BooleanParameter(&_trackQueryString));
+  
   options->addOption("--query.tracking-with-bindvars",
                      "whether to track bind vars with AQL queries",
                      new BooleanParameter(&_trackBindVars));
