@@ -1,6 +1,12 @@
 v3.6.8 (XXXX-XX-XX)
 -------------------
 
+* Added configuration option `--query.tracking-slow-queries` to decide whether
+  slow queries are tracked extra.
+
+* Added configuration option `--query.tracking-with-querystring` to decide
+  whether the query string is shown.
+
 * Fixed handling of failoverCandidates. Sometimes, a server can still be a
   failoverCandidate even though it has been taken out of the Plan. With this
   fix, such a server is quickly taken out of failoverCandidates and it can never
